src/scss/components/content/_unit.scss
/* ... */
.unit__contact {
  &:first-child .unit__contact__title {
    @include breakpoint($breakpoint-l) {
      margin-top: $spacing-half;
    }
  }

  .unit__contact__title {
    @include font-size(24px, 28px);
    border-bottom: 2px solid $color-black;
    margin-bottom: $spacing-and-half;
    margin-top: $spacing-half;
    padding-bottom: $spacing;

    @include breakpoint($breakpoint-l) {
      margin-top: $spacing-double;
    }
  }

  .unit__contact-row {
    border-bottom: 1px solid $color-black-20;
    margin-bottom: $spacing;
    padding-bottom: $spacing;
    padding-left: $spacing-double;

    &:last-of-type {
      border-bottom: 0 none;
      margin-bottom: 0;
      padding-bottom: 0;
    }

    .unit__contact-row__label {
      align-items: flex-start;
      display: flex;
      font-weight: 600;
      margin-bottom: 8px;

      .icon {
        margin-left: -$spacing-double;
        margin-right: $spacing-half;
      }
    }

    p:first-of-type {
      margin-top: 0;
    }
  }

  // Opening hours link (always external)
  .unit__contact-row--opening-hours a {
    padding-right: 24px; // Width of the external icon plus.
    position: relative;

    &:after {
      background-color: $color-black;
      background-size: contain;
      content: "";
      display: flex;
      height: 20px;
      mask-image: url('../icons/hds/ui/link-external.svg');
      mask-position: center;
      mask-repeat: no-repeat;
      mask-size: 14px;
      position: absolute;
      right: 0;
      top: 50%;
      transform: translateY(-50%);
      width: 24px;
    }

    &:hover {
      text-decoration: none;
    }
  }

  .address {
    > * {
      display: block;
    }
  }

  .phone {
    display: block;
    margin-bottom: $spacing-half;

    &:last-child {
      margin-bottom: 0;
    }
  }
}

.unit__services {
  margin-top: $spacing-quadruple;
  padding: 0;

  @include breakpoint($breakpoint-l) {
    margin-top: $spacing-sextuple;
  }

  .unit--services__container {
    padding-top: 0;
  }

  .unit__services__title {
    margin-top: 0;

    @include breakpoint($breakpoint-l) {
      @include font-size(48px, 48px);
    }
  }

  .unit__services__count-container {
    @include font-size(18px, 24px);
    display: block;
    margin-top: $spacing-and-half;
    width: 100%;

    @include breakpoint($breakpoint-l) {
      @include font-size(24px, 30px);
    }

    .unit__services__count {
      font-weight: 700;
    }
  }

  .unit__services__list {
    margin-top: $spacing-and-half;

    > * {
      @include breakpoint($breakpoint-l) {
        display: flex;
        flex-wrap: wrap;
        margin-left: calc(-#{$spacing-and-half} / 2);
        margin-right: calc(-#{$spacing-and-half} / 2);
        margin-top: $spacing-triple;
      }

      .service {
        width: 100%;

        @include breakpoint($breakpoint-l) {
          margin-top: $spacing-and-half;
          width: 25%;
        }

        &:nth-child(-n+4) {
          margin-top: 0;
        }

        @include breakpoint($breakpoint-l) {
          width: calc(25% - #{$spacing-and-half});
        }

        // If there is 1 or 2 items inside the services listing:
        @include content_count(1, 2) {
          @include breakpoint($breakpoint-l) {
            width: calc(50% - #{$spacing-and-half});
          }
        }

        // If there 3 items inside the services listing:
        @include content_count(3) {
          @include breakpoint($breakpoint-l) {
            width: calc(33.33% - #{$spacing-and-half});
          }
        }
      }
    }
  }

  .unit__services__pager {
    list-style: none;
    margin: $spacing-quadruple 0 0;
    padding: 0;
  }

  .unit__services__pager-button-wrapper {
    display: flex;
    justify-content: center;
    width: 100%;

    .unit__services__pager-button {
      @extend .emulate-button--primary;
    }
  }
}

.unit__accessibility_sentences {
  margin-top: $spacing-double;

  &.accordion {
    .accordion-item__content {
      h3 {
        margin-top: 0;

        &:not(:first-of-type) {
          padding-top: $spacing-double;
        }
      }

      ul {
        margin: 0;
        padding: 0;
      }

      li {
        display: list-item;
        margin-left: $spacing-and-half;
        margin-top: $spacing;
      }
    }

    .accordion-item__content__inner {
      @include breakpoint($breakpoint-s) {
        padding-left: 50px;
      }

      @include breakpoint($breakpoint-l) {
        padding-left: 72px;
      }
    }
  }
}

.main-content:last-child .unit.unit--full {
  .unit__services:last-child {
    // Make the keywords element go "under" the footer.
    margin-bottom: calc(-1 * (#{$footer-koro-height} + #{$spacing-triple}));
    padding-bottom: $spacing-double + $footer-koro-height;

    @include breakpoint($breakpoint-l) {
      margin-bottom: calc(-1 * (#{$footer-koro-height} + #{$spacing-quadruple}));
      padding-bottom: $spacing-quadruple + $footer-koro-height;
    }
  }
}
/* ... */

